# mess2nasa

./: .gitignore  1.tgz  README.md  pyproject.toml  test.ipynb  test_full.tgz
example/: test.ipynb
example/C5H7/: C5H7.c97
example/run/: C5H7.i97  C5H7.o97  pf.inp
examples/C5H7/: fit.nasa  input.yaml
examples/H2O/: fit.nasa  input.yaml  pf.inp
examples/NH2NO/: fit.nasa  input.yaml  pf.inp
examples/NHNOH/: fit.nasa  input.yaml  pf.inp  vis.ipynb
src/autochem/: .gitrepo
src/autochem/autochem/util/: form.py
src/mess2nasa/: cli.py  hform.py
src/mess2nasa/test/: test.ipynb
test/: README.md  pf.aux
test_full/: C5H7.o97  all_therm.ckin_1  dir.yaml  fort.26  run_pac99.sh  run_thermp.sh
test_pac99/: C5H7.c97  C5H7.i97
test_pac99_alt/: C5H7.i97
test_pac99_alt_name/: C5H7.c97  C5H7.i97  C5H7.o97
test_pac99_alt_units/: C5H7.c97  C5H7.o97
test_thermp/: C5H7.i97  thermp.out
tests/: pf.aux  pf.inp
