[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = []
name = "mess2nasa"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mess2nasa = { path = ".", editable = true }

[tool.pixi.tasks]
