[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = []
name = "mess2nasa"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "auto-mech"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mess2nasa = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
automech-toolbox = ">=2024.7.18,<2025"
jupyter = ">=1.1.1,<2"
mako = ">=1.3.9,<2"
more-itertools = ">=10.6.0,<11"
numpy = ">=2.2.4,<3"
qcelemental = ">=0.29.0,<0.30"
scipy = ">=1.15.2,<2"
pyparsing = ">=3.2.3,<4"
py3dmol = ">=2.4.2,<3"
rdkit = ">=2025.3.1,<2026"
networkx = ">=3.4.2,<4"
xarray = ">=2025.3.1,<2026"
