[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = []
name = "mess2nasa"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "auto-mech"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mess2nasa = { path = ".", editable = true }
autochem = { path = "src/autochem", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
automech-toolbox = ">=2024.7.18,<2025"
# AutoChem dependencies
ipython = "8.15.*"
ipywidgets = "*"
jupyter = "*"
more-itertools = "*"
networkx = "3.3.*"
numpy = "1.26.*"
py3dmol = "*"
pyparsing = "*"
pyyaml = "*"
qcelemental = "*"
rdkit = "*"
scipy = "1.12.*"
xarray = "2023.8.*"
altair-all = ">=5.5.0,<6"
